adapting to java 11